test/spec_vectors/ref/fail/module_1.wat
(module (type $type-func-param-invalid (func (param (ref 1)))))